# ShoujoGensou

Arti/: .gitignore  CMakeLists.txt  Project.rb  Seisaku.rb  library.h  module.modulemap
Arti/CoreArti/Include/: library.hxx
Arti/CoreArti/Source/: library.cpp
YukariYuyuko/: .gitignore  Package.swift
YukariYuyuko/Source/Yukari2SCaeKriMoYhEn7/: Yukari2SCaeKriMoYhEn.swift
YukariYuyuko/Source/Yukari2SCaeKriMoYhEn7/Component/: Transform.swift
YukariYuyuko/Source/YukariYuyuko/: YukariYuyuko.swift
